# wiki-speedrun

./: pyproject.toml
src/wikiSpeedRun/: config.py  main.py
src/wikiSpeedRun.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
