[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wikiSpeedRun"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["playwright", "parsel"]

[project.scripts]
wiki-run = "wikiSpeedRun.main:run_agent"

[tool.setuptools.packages.find]
where = ["src"]